<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="#242422">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Recipe Title"
        android:textColorHint="@color/white"
        />

    <EditText
        android:id="@+id/editIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ingredients"
        android:minHeight="100dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/editInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Instructions"
        android:minHeight="150dp"
        android:gravity="top"
        android:textColorHint="@color/white"
        android:inputType="textMultiLine" />

    <ImageView
        android:id="@+id/imageViewRecipe"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:background="#8C6E41"
        android:textColorHint="@color/white"/>

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="140dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="Select Image"
        android:textColor="@color/black"
        android:backgroundTint="#C8C6C6"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btnSaveRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save Recipe"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/Exit"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="Exit"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/RecipeList"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#B37417"
            android:text="Recipe List"
            android:layout_marginLeft="65dp"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Exit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>